Thu Oct  1 19:27:22 PDT 1998 Manish Singh <yosh@gimp.org>

	* esd.m4: make it work right

1998-10-01  Yo Ric Dude  <ricdude@piranha>

	* esound.spec[.in]: make autoconf do the version updating for us.

	* Makefile.am, configure.in: move version updating to same place.

1998-10-01  Yo Ric Dude  <ricdude@ix.netcom.com>

	* audio_alsa.c: multiple audio card detection patches from Bibek.
  	This should open and use the first available card under ALSA.  It
 	has been tested on single card systems, and works fine.  However,
 	no one with multiple audio cards has tested this, so if anyone is
 	feeling brave and adventurous... =)

1998-10-01  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esd.h, esdlib.c: why sample size is treated as a long in esdlib,
 	but an int everywhere else is beyond me.  64 bit platforms should
 	be happier now. still have to check 32-64 bit interoperability

	* configure.in: touch-ups and commenting *shudder*.

Thu Oct  1 22:58:03 CEST 1998 Jochen Friedrich <jochen@scram.de>

	* esdlib.c: added kludge to esd_sample_cache() to make it
	work under Alpha. Problem was to send a long and receive an int.
	On Alpha this makes extra 4 bytes of crap enough to bring
	client and server out of sync. Probably a better solution is
	to change the prototype for size from long to int.

1998-10-01  Raja R Harinath  <harinath@cs.umn.edu>

	* configure.in (esd-config): Turn on execute bit only if
	`esd-config' was generated.
	(getopt_long): New check.
	* getopt.h, getopt.c, getopt1.c: New files.
	* Makefile.am (esdplay_LDADD): Add LIBOBJS.
	
Wed Sep 30 21:08:19 PDT 1998 Manish Singh <yosh@gimp.org>

	* esd.m4
	* esd-config
	* configure.in: Added support for esd-config (like GTK+). Added
	explict disabling of local sound (for an audio data server). Fixed
	NEW_ALSA detection. Define HAVE_INET_ATON if we have it.

	* audio.c
	* audio_none.c: support for no local sound

	* esdlib.c: provide inet_aton implementation if it's not avaliable
