@@ -9,6 +9,9 @@ int esd_audio_rate = ESD_DEFAULT_RATE;
 /* the audio device, /dev/dsp, file descriptor */
 static int esd_audio_fd = -1;
 
+/* debugging messages for audio devices */
+static int driver_trace = 0;
+
 /*******************************************************************/
 /* returns audio_fd for use by main prog - platform dependent */
 
